# HLM

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml
.github/workflows/: verify.yml
data/: README.md
shared/: CHEATSHEET.md
shared/ml_utils/: __init__.py  data.py
tools/: build_index.py  new_week.py  verify_notebooks.py
tools/templates/: meta.yml.tmpl  week_readme.md.tmpl
weeks/week01/: README.md  lab1_CB.SC.U4CSE24664.ipynb  meta.yml
weeks/week02/: README.md  lab2_CB.SC.U4CSE24664.ipynb  meta.yml
weeks/week03/: README.md  lab3_CB.SC.U4CSE24664.ipynb  meta.yml
